--- a/packages.html
+++ b/packages.html
@@ -31,7 +31,6 @@
 			html,body {
 				height: 100%;
 				margin: 0;
-				background-color: #E5E5E5;
 				font-family: 'RobotoDraft', sans-serif;
 			}
 			paper-header-panel {
@@ -41,6 +40,13 @@
 			}
 			paper-checkbox {
 				padding: 1em;
+			}
+
+			paper-toolbar.android-sdk-manager {
+				background-color: #90c653;
+			}
+			paper-menu.android-sdk-manager {
+				background-color: #f7f7f7;
 			}
 		</style>
 
