display zip package for windows on studio download page

--- a/studio/template.html
+++ b/studio/template.html
@@ -19,14 +19,15 @@
     .download:first-of-type tr:nth-of-type(3) td {
       visibility: hidden;
     }
-    .download:last-of-type tr:nth-of-type(2) td:not(:first-of-type) {
+    /*.download:last-of-type tr:nth-of-type(2) td:not(:first-of-type) {
       visibility: hidden;
-    }
+    }*/
   </style>
 
 </head>
 <body>
 <!-- insert -->
+<!-- TODO sync requirements -->
 <section id="Requirements" class="dac-section dac-light dac-small">
   <div class="wrap">
 
