bundled web components

--- a/android/studio/template.html
+++ b/android/studio/template.html
@@ -27,15 +27,16 @@
 
 </head>
 <body>
-<section id="sdk">
-    <div class="wrap">
-        <h2 class="norule">SDK browser</h2>
-        <p><a href="/android/repository/">android/repository</a></p>
-    </div>
-</section>
-<section id="client">
+<section>
   <div class="wrap">
+    <h1 class="dac-hero-title">Download Android Studio and SDK Tools</h1>
+
+    <p>SDK browser, <a href="/android/repository/">android/repository</a></p>
+
     <h2 class="norule">Client setup</h2>
+    <p>Verify the integrity of the files downloaded, e.g.</p>
+    <pre>$ openssl sha -sha256 android-studio-ide-162.4069837-windows.zip
+SHA256(android-studio-ide-162.4069837-windows.zip)= b61d6f08758b5b2e6dad604d8a8d61acf549f746b07dbb0c2265daad01a7d2b7</pre>
 
     <dom-bind>
       <template>
